# Laundry-machine-in-C-Practice

wasmachineCLION/: CMakeLists.txt  Motor.cpp  Motor.h  Thermometer.cpp  Thermometer.h  Trommel.cpp  Trommel.h  Verwarmen.cpp  Verwarmen.h  Wasprogramma.cpp  Wasprogramma.h  WaterRegeling.cpp  WaterRegeling.h  WaterStandSensor.cpp  WaterStandSensor.h  main.cpp
