cmake_minimum_required(VERSION 3.25)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp Wasprogramma.cpp Wasprogramma.h Trommel.cpp Trommel.h WaterRegeling.cpp WaterRegeling.h Motor.cpp Motor.h WaterStandSensor.cpp WaterStandSensor.h Verwarmen.cpp Verwarmen.h Thermometer.cpp Thermometer.h)
